--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,22 +1,41 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        FOS\UserBundle\Model\UserInterface: bcrypt
+
+    role_hierarchy:
+        ROLE_READER: ROLE_USER
+        ROLE_ADMIN: ROLE_READER
+
     providers:
-        in_memory: { memory: null }
+        fos_userbundle:
+            id: fos_user.user_provider.username_email
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        login:
+            pattern:  ^/api/login
+            stateless: true
+            provider: fos_userbundle
+            form_login:
+                check_path: /api/login_check
+                username_parameter: _username
+                password_parameter: _password
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                require_previous_session: false
+
         main:
-            anonymous: lazy
+            pattern: ^/
+            provider: fos_userbundle
+            stateless: true
+            anonymous: true
+            lexik_jwt: ~
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/login_check,        roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/login,              roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api,                    roles: IS_AUTHENTICATED_ANONYMOUSLY }
