--- a/.env.dist
+++ b/.env.dist
@@ -37,7 +37,7 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.root_dir%/../var/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.root_dir%/../var/jwt/public.pem
+JWT_SECRET_KEY=%kernel.root_dir%/../config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.root_dir%/../config/jwt/public.pem
 JWT_PASSPHRASE=videalpes38
 ###< lexik/jwt-authentication-bundle ###
